--- a/adminapp/templates/adminhome/addproduct.html
+++ b/adminapp/templates/adminhome/addproduct.html
@@ -216,7 +216,11 @@
 
         <div class="input__box">
           <label for="" class="details">catagory</label>
-          <input type="text" placeholder="category" required name="category">
+          <select  name="category">
+            <option value="Residential">Residential</option>
+            <option value="Commercial">Commercial</option>
+            <option value="Renovation">Renovation</option>
+          </select>
         </div>
 
         <div class="input__box">
