--- a/adminapp/templates/adminhome/projectedit.html
+++ b/adminapp/templates/adminhome/projectedit.html
@@ -207,8 +207,13 @@
 
                 <div class="input__box">
                     <label for="" class="details">catagory</label>
-                    <input type="text" placeholder="category" value="{{edit.catagory}}" required name="category">
-                </div>
+                    <select  name="category">
+                        <option value="{{edit.catagory}}">{{edit.catagory}}</option>
+                      <option value="Residential">Residential</option>
+                      <option value="Commercial">Commercial</option>
+                      <option value="Renovation">Renovation</option>
+                    </select>
+                  </div>
 
                 <div class="input__box">
                     <label for="" class="details">Complete Description of the Project</label>
