--- a/gmeuser/templates/gmehome/reviews.html
+++ b/gmeuser/templates/gmehome/reviews.html
@@ -102,12 +102,18 @@
     transform: translateY(-10px);
     transition: all ease 0.3s;
 }
+ .aaa{
+    padding-top: 6%;
+  }
  
 @media(max-width:1060px){
     .testimonial-box{
         width:45%;
         padding: 10px;
     }
+    .aaa{
+    margin-top: 10%;
+  }
 }
 @media(max-width:790px){
     .testimonial-box{
@@ -116,6 +122,9 @@
     .testimonial-heading h1{
         font-size: 1.4rem;
     }
+    .aaa{
+    padding-top: 10%;
+  }
 }
 @media(max-width:340px){
     .box-top{
@@ -125,6 +134,10 @@
     .reviews{
         margin-top: 10px;
     }
+    .aaa{
+    padding-top: 10%;
+    
+  }
 }
 ::selection{
     color: #ffffff;
@@ -161,9 +174,9 @@
 
 
 
-
+   <div class="aaa" style="background-color: #177232;">
     <!--Testimonials------------------->
-    <section id="testimonials" style="background-color: #177232; padding-top: 6%;">
+    <section id="testimonials" style="background-color: #177232;">
         <!--heading--->
         <div class="testimonial-heading">
             <span style="color: white;">Comments</span>
@@ -208,6 +221,7 @@
            
         </div>
     </section>
+</div>
 
     <script>
         document.getElementById('star')
