--- a/gmeuser/templates/gmehome/index.html
+++ b/gmeuser/templates/gmehome/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="{% static 'css/new.css' %}">
@@ -12,17 +12,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-    
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
 
-  
+
   <script>
-    const open=document.getElementById()
-    const moddl_cont = 
-    document.getElementById()
-    const close = document.getElementById( )
+    const open = document.getElementById()
+    const moddl_cont =
+      document.getElementById()
+    const close = document.getElementById()
   </script>
   <style>
     @media only screen and (max-width: 600px) {
@@ -40,20 +40,20 @@
         box-shadow: 10px 10px 20px rgba(25, 29, 29, 0.6);
       }
 
-      @media(max-width:340px){
+      @media(max-width:340px) {
         .mybtn {
-    background-color: #088a5d;
-    border: none;
-    color: white;
-    padding: 9px 17px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.1rem;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-}
+          background-color: #088a5d;
+          border: none;
+          color: white;
+          padding: 9px 17px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 1.1rem;
+          cursor: pointer;
+          border-radius: 4px;
+        }
+      }
 
       .bottom-left {
         position: absolute;
@@ -126,44 +126,70 @@
       }
     }
 
-    .spb{
+    .spb {
       height: 272px;
       width: 100%;
     }
-    @media(max-width:340px){
-  .spb {
-    height: 200px;
-    width: 100%;   
-  }
-}
 
-  @media(max-width:790px){
-  .spb {
-    height: 230px;
-    width: 100%;   
-  }
-}
+    .jjj {
+      min-height: 700px;
+      max-height: 700px;
+    }
 
+    @media(max-width:340px) {
+      .spb {
+        height: 200px;
+        width: 100%;
+      }
 
+      .jjj {
+        min-height: 500px;
+        max-height: 500px;
+      }
+    }
 
+    @media(max-width:500px) {
+      .spb {
+        height: 200px;
+        width: 100%;
+      }
+
+      .jjj {
+        min-height: 500px;
+        max-height: 500px;
+      }
+    }
+
+    @media(max-width:790px) {
+      .spb {
+        height: 230px;
+        width: 100%;
+      }
+
+      .jjj {
+        min-height: 500px;
+        max-height: 500px;
+      }
+    }
   </style>
-  
+
 
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar navbar-light fixed-top p-3" style="background-color:#ffffff ;">
-      <a class="navbar-brand ms-4 display-1" href="#"><img class="" src="{% static 'images/logo3.png' %}" style="height:30px; margin-bottom: 12px;"   alt=""> &nbsp;GMI Architects </a>
+      <a class="navbar-brand ms-4 display-1" href="#"><img class="" src="{% static 'images/logo3.png' %}"
+          style="height:30px; margin-bottom: 12px;" alt=""> &nbsp;GMI Architects </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
+
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-           
+
             <a class="nav-link activa me-4" href="{% url 'gmeuser:index' %}">Home </a>
           </li>
           <li class="nav-item me-4">
@@ -191,7 +217,7 @@
 
   </header>
   <section>
-    
+
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -203,13 +229,11 @@
       </div>
       <div class="carousel-inner">
         {% if slid %}
-        {% for slide in slid %}     
-        
+        {% for slide in slid %}
+
 
         <div class="carousel-item {% if forloop.counter == 1 %} active {% endif %}">
-          <img style="min-height: 700px; max-height: 700px;"
-            src="{{slide.image_1.url}}"
-            class="d-block w-100" alt="...">
+          <img src="{{slide.image_1.url}}" class="d-block w-100 jjj" alt="...">
         </div>
         {% endfor %}
         {% endif %}
@@ -234,18 +258,19 @@
       <div class="row">
 
         {% for i in details %}
-       
+
         <div class="col-md-4 col-12 p-4">
           <a style="text-decoration: none; color: inherit;" href="{% url 'gmeuser:post' i.id i.title %}">
-          <div class="cad">
-            <img class='spb' src="{{i.project_image.url}}"   alt="Avatar">
-            <div class="contaner">
-              <p class="as" >{{i.title}}
-              <p>
+            <div class="cad">
+              <img class='spb' src="{{i.project_image.url}}" alt="Avatar">
+              <div class="contaner">
+                <p class="as">{{i.title}}
+                <p>
+              </div>
             </div>
-          </div></a>
+          </a>
         </div>
-        {% endfor %}  
+        {% endfor %}
 
       </div>
     </div>
