--- a/gmeuser/templates/gmehome/projects.html
+++ b/gmeuser/templates/gmehome/projects.html
@@ -50,6 +50,9 @@
   .active {
     color: rgb(160, 137, 7);
   }
+  .aaa{
+    margin-top: 6%;
+  }
 
   @media(max-width:1060px) {
     .ul {
@@ -66,6 +69,7 @@
       flex-wrap: wrap;
       max-width: 1000px;
     }
+    
 
     .li {
       justify-content: center;
@@ -83,6 +87,9 @@
       background-color: inherit;
       border: none;
     }
+    .aaa{
+    margin-top: 10%;
+  }
   }
 
   @media(max-width:790px) {
@@ -117,6 +124,9 @@
       background-color: inherit;
       border: none;
     }
+    .aaa{
+    margin-top: 20%;
+  }
   }
 
   @media(max-width:340px) {
@@ -151,6 +161,9 @@
       background-color: inherit;
       border: none;
     }
+    .aaa{
+    margin-top: 50%;
+  }
   }
 
   @media(max-width:250px) {
@@ -185,6 +198,9 @@
       background-color: inherit;
       border: none;
     }
+    .aaa{
+    margin-top: 10%;
+  }
   }
 </style>
 
@@ -215,7 +231,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="row" style="margin-top:6%;">
+<div class="aaa">
+<div class="row" >
   <div class="col-12">
     <ul class="ul">
       <li class="li "><button id="proj" style="color: rgb(0, 0, 0);"></i> Projects <i
@@ -282,7 +299,7 @@
         <div class="cad">
           <img src="{{i.project_image.url}}" alt="Avatar" style="width:100%; height:272px;">
           <div class="contaner">
-            <p class="as">{{i.title}}
+            <p class="as">{{i.title}}          
             <p>
           </div>
         </div>
@@ -312,6 +329,7 @@
     {% endif %}
     {% endfor %}
   </div>
+</div>
 </div>
 
 <script>
